# django

./: .gitignore  README.md
learning-platform/: .coveragerc  .env.example  .pre-commit-config.yaml  README.md  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt
learning-platform/documents/: improve.md  issues.md
learning-platform/src/: conftest.py  nixpacks.toml  procfile
learning-platform/src/accounts/: admin.py  apps.py  factories.py  forms.py  models.py  services.py  signals.py  tasks.py  validators.py
learning-platform/src/accounts/api/: response_schema.py  serializers.py  views.py
learning-platform/src/accounts/migrations/: 0001_initial.py  0002_alter_user_gender.py  0002_alter_user_is_superuser.py  0002_alter_user_subjects.py  0002_rename_birth_date_user_date_of_birth.py  0002_rename_subject_specialization_and_more.py  0003_alter_specialization_description_and_more.py  0003_alter_user_role.py  0003_alter_user_scholarship.py  0003_rename_uuid_user_id.py  0004_remove_user_role.py  0005_alter_user_phone_number.py  0006_alter_user_first_name_alter_user_gender_and_more.py
learning-platform/src/categories/: admin.py  factories.py  models.py
learning-platform/src/config/: admin.py  api_router.py  apps.py  celery.py  urls.py
learning-platform/src/core/: api_views.py  constants.py  custom_schema.py  error_messages.py  exception_handler.py  exceptions.py  filters.py  helpers.py  mixins.py  models.py  pagination.py  permissions.py  responses.py  serializers.py  test.py  validators.py
learning-platform/src/core/tests/: base.py
learning-platform/src/courses/: admin.py  apps.py  constants.py  factories.py  forms.py  models.py  permissions.py  services.py  signals.py  tasks.py
learning-platform/src/enrollments/: admin.py  factories.py  forms.py  models.py
learning-platform/src/instructors/: admin.py  factories.py  forms.py  models.py
learning-platform/src/notifications/: admin.py  constants.py  factories.py  models.py  services.py
learning-platform/src/students/: admin.py  factories.py  forms.py  models.py
superbook/: README.md  manage.py  pyproject.toml
superbook/accounts/: admin.py  models.py
superbook/accounts/migrations/: 0001_initial.py
superbook/core/: celery.py
superbook/posts/: admin.py  factories.py  forms.py  pagination.py  paginations.py  serializers.py  services.py  tasks.py  urls.py  views.py
superbook/posts/migrations/: 0001_initial.py  0002_post_title.py
superbook/posts/models/: __init__.py  mixin.py  post.py  superhero.py
superbook/posts/tests/: test_post_model.py  test_superhero_model.py
superbook/superbook/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+137 files in other folders)
